	* Copied all ecommerce member fields to Order, so that orders can be placed without member.
	* Added docs folder, along with some developer and user documentation
	* Introduced mysite/dev/ecommerce to get quick access to ecommerce dev tools
	* Began updating test suite
	* Introduced the ability to pay and cancel incomplete orders

0.7 - 0.8.1	
	* Variations working again
	* Re-structured default templates to be more hierartical and extensible. Removed redundant templates.
	* Implemented new reciept design
	* Updated CMS Order interface
	* Introduced FullBillingAddress and FullShippingAddress functions on Order to provide ways to get combined address fields.

	* Merged in DBCart, Burnbright, and SunnySideUp branches
	* Depricated AllowPurchase function on Product & ProductVariation in favour of canPurcahse. SilverStripe has can____ capabilites built in, and AllowPurchase was overriding the DB field.
	* Improved ProductBulkLoader to allow setting ProductGroup, and linking up an image of the product.
	* Merged ShoppingCart and ShoppingCart_Controller into one class
	* Introduced filters/paremeters system for more complex cart situations

0.6.1
	* Modified code to work with SS 2.4, and payment trunk as @ revision 103257. This mainly involved supporting the Money class.
	* Separated out unnecessary css styling. The default style is very much tied to black candy. (This can be put into a theme)
	* Improved efficiency of ProductGroup to make one database call to retrieve products. All ProductGroup children are retrieved by default, rather than just the immediate children.
	* Removed 'ShowInMenus' condition for displaying group products.
	* Added sorting controls to ProductGroup pages
	* Added pagination to default ProductGroup template
	* Removed separation of featured and non-featured products. The default sort is set to show featured products, then the rest by title (similar to TradeMe.co.nz)
	* Tidied up invoice printing
	* Got the 'all orders' SS report working again